teleport test realized

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
      <Compile Include="Assets\DestPrimitives\Source\Primitives\Tube.cs" />
      <Compile Include="Assets\DestPrimitives\Source\Primitives\WireBox.cs" />
      <Compile Include="Assets\InstantiateGraph.cs" />
+     <Compile Include="Assets\MiniMap.cs" />
      <Compile Include="Assets\Oculus\AudioManager\Scenes\Scripts\TestScript.cs" />
      <Compile Include="Assets\Oculus\AudioManager\Scripts\Audio\AmbienceEmitter.cs" />
      <Compile Include="Assets\Oculus\AudioManager\Scripts\Audio\AudioManager.cs" />
