--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\_MiniMap.cs" />
      <Compile Include="Assets\ButtonTest.cs" />
      <Compile Include="Assets\DestPrimitives\Source\Generators\GeoSphereGenerator.cs" />
      <Compile Include="Assets\DestPrimitives\Source\Generators\MeshGenerator.cs" />
